--- a/style.css
+++ b/style.css
@@ -40,5 +40,9 @@
     margin: 0.5em;
     text-align: center;
 }
+.box-three:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s ease-in-out;
+}
 
     
